Write the value as number and don't format it.